# AZPlayer

./: .gitattributes  .gitignore  CMakeLists.txt  Main.qml  README.md  audioplayer.cpp  audioplayer.h  main.cpp  release.ps1  resource.qrc  spscqueue.h  utils.h
3rd/miniaudio/: miniaudio.cpp
LICENSES/miniaudio/: LICENSE
clock/: globalclock.cpp  globalclock.h
cmake/: local.cmake.example
compat/: compat.h
config/: env.json.example
controller/: mediacontroller.cpp  mediacontroller.h
decode/: decodeaudio.cpp  decodeaudio.h  decodebase.cpp  decodebase.h  decodesubtitle.cpp  decodesubtitle.h  decodevideo.cpp  decodevideo.h
demux/: demux.cpp  demux.h
docs/: architecture.drawio  bugList.md  大致功能.md
include/controller/: mediacontroller.h
include/decode/: decodeaudio.h  decodebase.h  decodesubtitle.h  decodevideo.h
include/demux/: demux.h
include/renderer/: audioplayer.h  renderdata.h  videoplayer.h  videorenderer.h
include/stats/: playbackstats.h
include/types/: types.h
include/utils/: dirtyrectmanager.h  enumindexarray.h  episodeassetmanager.h  filehelper.h  powermanager.h  spscbuffer.h  utils.h
qml/: AZButton.qml  AZDial.qml  AZFileDialog.qml  AZListView.qml  AZPlayerAbout.qml  AZPlayerCtrlBar.qml  AZProgressBar.qml  AZSlider.qml  AZStreamView.qml  AZTextButton.qml  AZTextInput.qml  AZTooltip.qml  AZTopBar.qml  AZWindowControls.qml  Main.qml
qml/bottomBar/: AZBottomBar.qml  AZPlayerCtrlBar.qml  AZPlayerSetting.qml  AZProgressBar.qml
qml/controls/: AZButton.qml  AZCheckBox.qml  AZComboBox.qml  AZDial.qml  AZEventBlocker.qml  AZListView.qml  AZSlider.qml  AZTabBar.qml  AZTextButton.qml  AZTextInput.qml  AZTooltip.qml  AZWindow.qml
qml/fileDialog/: AZFileDialog.qml
qml/mediaDropPanel/: AZMediaDropPanel.qml
qml/playerState/: AZPlayerState.qml
qml/settings/: AZSettings.qml
qml/sideBar/: AZAudioTab.qml  AZFileSideBar.qml  AZFileTab.qml  AZSideBar.qml  AZStreamView.qml  AZSubtitleTab.qml
qml/topBar/: AZPlayerAbout.qml  AZTopBar.qml  AZWindowControls.qml
qml/videoArea/: AZPlaybackStatsArea.qml  AZVideoAngleDialArea.qml  AZVideoArea.qml
renderer/: assrender.cpp  assrender.h  audioplayer.cpp  audioplayer.h  renderdata.cpp  renderdata.h  videoplayer.cpp  videoplayer.h  videorenderer.cpp  videorenderer.h
resource/icon/: appico.rc
resource/shaderSource/: shader.frag  shader.vert
src/: main.cpp
src/clock/: globalclock.cpp
src/controller/: mediacontroller.cpp
src/decode/: decodeaudio.cpp  decodebase.cpp  decodesubtitle.cpp  decodevideo.cpp
src/demux/: demux.cpp
src/renderer/: assrender.cpp  audioplayer.cpp  renderdata.cpp  videoplayer.cpp  videorenderer.cpp
src/stats/: playbackstats.cpp
src/utils/: dirtyrectmanager.cpp  episodeassetmanager.cpp  filehelper.cpp  powermanager.cpp  spscbuffer.cpp
stats/: playbackstats.cpp  playbackstats.h
types/: ptrs.h  types.h
utils/: AtomicDoubleBuffer.h  dirtyrectmanager.cpp  dirtyrectmanager.h  episodeassetmanager.cpp  episodeassetmanager.h  filehelper.cpp  filehelper.h  powermanager.cpp  powermanager.h  spscbuffer.cpp  spscbuffer.h  utils.h
